--- a/style.css
+++ b/style.css
@@ -31,11 +31,31 @@ section#telefone {
     background-image: url("imagens/frame-iphone.png");
 }
 
-iframe#home {
+
+iframe#tela {
     position: relative;
     top: 80px;
     left: 22px;
-    width: 264px;
+    width: 267px;
     height: 468px;
  
+}
+
+section img {
+    width: 50px;
+    border-radius: 50%;
+    box-shadow: 2px 2px rgba(0, 0, 0, 0.616);
+    margin: 10px;
+}
+
+#redes-sociais  {
+    text-align: right;
+}
+
+
+#redes-sociais img:hover {
+  border: 2px solid grey;
+  transform: translate(-3px, -3px);
+  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.63);
+  transition: transform .3s, border 4s;
 }
